Fixed logo alignment

--- a/client/src/styles/BrandBreakdown-new.css
+++ b/client/src/styles/BrandBreakdown-new.css
@@ -21,7 +21,6 @@
 }
 
 .breakdown_data-container {
-    margin-top: 1rem;
 }
 
 .breakdown_mainField {
