--- a/client/src/styles/BrandBreakdown.css
+++ b/client/src/styles/BrandBreakdown.css
@@ -45,7 +45,7 @@ body {
 
 .breakdown_logoText {
     margin: 0;
-    /* margin-top: 118px; */
+    margin-top: 90px;
     /* margin-left:100px; */
     font-family: DM Sans;
     font-style: normal;
